// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

// --- ENUMS ---
enum Role {
  ADMIN
  TECHNICIAN
  ENGINEER
  MANAGER
}

model Operator {
  id               String            @id @default(uuid())
  code             String            @unique
  name             String
  users            User[]
  aircrafts        Aircraft[]
  serviceBulletins ServiceBulletin[]
}

enum DocumentStatus {
  DRAFT
  OPEN
  ACTIVE
  SUPERSEDED
  TERMINATED
  CANCELLED
  CLOSED
}

enum ComplianceStatus {
  NOT_APPLICABLE
  OPEN
  PENDING
  IN_PROGRESS
  COMPLIED
  NOT_REQUIRED
  DEFERRED
  OVERDUE
}

enum SbRelationType {
  CONCURRENT
  SUPERSEDES
  TERMINATES
}

enum FulfillmentRule {
  ANY_OF
  ALL_OF
  AT_LEAST_N
  SEQUENCE
}

enum FulfillmentStatus {
  OPEN
  PARTIALLY_SATISFIED
  SATISFIED
  EXPIRED
  CANCELLED
}

enum Priority {
  LOW
  MEDIUM
  HIGH
  CRITICAL
}

enum TaskType {
  INSPECTION
  MODIFICATION
  REPLACEMENT
  REPAIR
  SOFTWARE_UPDATE
  RECORD_REVIEW
  OTHER
}

enum OcrProcessingStatus {
  UPLOADED
  PROCESSING
  EXTRACTED
  REVIEW_REQUIRED
  FAILED
}

enum OcrDraftStatus {
  DRAFT
  REVIEW_REQUIRED
  VALIDATED
  GENERATED
}

// SB Category Type for UI badge display
enum SbType {
  MANDATORY
  RECOMMENDED
  ALERT
  ADVISORY
}

// Engineering recommendation action
enum EngRecAction {
  COMPLY
  DEFER
  NA
}

// --- AUTH & USER ---
model User {
  id         String    @id
  email      String    @unique
  username   String    @unique
  password   String
  role       Role      @default(TECHNICIAN)
  operatorId String?
  operator   Operator? @relation(fields: [operatorId], references: [id])
  createdAt  DateTime  @default(now())
  updatedAt  DateTime  @default(now()) @updatedAt

  uploadedServiceBulletins ServiceBulletin[]           @relation("ServiceBulletinCreator")
  updatedServiceBulletins  ServiceBulletin[]           @relation("ServiceBulletinUpdater")
  engineeringRecs          EngineeringRecommendation[]
  reviewActions            ReviewAction[]
  sbComplianceAudits       SbComplianceAudit[]
}

// --- ASSETS ---
model Aircraft {
  id           String    @id
  registration String    @unique
  msn          String?   @unique
  aircraftType String
  operatorId   String?
  operator     Operator? @relation(fields: [operatorId], references: [id])
  active       Boolean   @default(true)
  engines      Engine[]
  createdAt    DateTime  @default(now())
  updatedAt    DateTime  @default(now()) @updatedAt
}

model Engine {
  id         String    @id
  esn        String    @unique
  msn        String?
  model      String
  position   String?
  aircraftId String?
  aircraft   Aircraft? @relation(fields: [aircraftId], references: [id], onDelete: SetNull)
  active     Boolean   @default(true)

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  shopVisitReports      ShopVisitReport[]
  engineDataSheets      EngineDataSheet[]
  iq03Reports           Iq03Report[]
  complianceRecords     ComplianceRecord[]
  activeComponents      EngineActiveComponent[]
  componentLogs         EngineDocumentComponentLog[]
  llpLogs               EngineDocumentLlpLog[]
  adLogs                EngineDocumentAdLog[]
  groupResults          SbGroupResult[]
}

// --- DOCUMENTS (AD, SB, EES) ---

// 1. Airworthiness Directive (AD)
model AirworthinessDirective {
  id        String         @id
  adNumber  String         @unique
  title     String
  issuer    String
  issueDate DateTime
  dueDate   DateTime?
  status    DocumentStatus @default(ACTIVE)

  createdAt         DateTime           @default(now())
  complianceRecords ComplianceRecord[]
}

// 2. Service Bulletin (SB) - Sumber dokumen untuk OCR & Unified Model
model ServiceBulletin {
  id         String         @id
  sbNumber   String         @unique
  revision   String?
  title      String
  issuer     String
  issueDate  DateTime
  receivedAt DateTime       @default(now())
  status     DocumentStatus @default(ACTIVE)

  // Applicability / Classification fields (from company DB or AI)
  sbType             SbType?
  complianceCategory Int?
  effectivityType    String?
  effectivityRange   String?
  compliancePeriod   String?
  aircraftType       String?
  impactType         String?

  // Operator Context
  operatorId String?
  operator   Operator? @relation(fields: [operatorId], references: [id])

  // File Upload fields
  originalFileName String?
  storedFileName   String?
  createdById      String?
  createdBy        User?   @relation("ServiceBulletinCreator", fields: [createdById], references: [id])

  updatedById String?
  updatedBy   User?   @relation("ServiceBulletinUpdater", fields: [updatedById], references: [id])

  // Relations
  ocrResult         OcrResult?
  generatedEes      EesDocument?
  engineeringRec    EngineeringRecommendation?
  createdAt         DateTime                   @default(now())
  complianceRecords ComplianceRecord[]
  relations         SbRelation[]

  @@index([operatorId, receivedAt])
  @@index([status, receivedAt])
}

model OcrResult {
  id                String          @id @default(uuid())
  serviceBulletinId String          @unique
  serviceBulletin   ServiceBulletin @relation(fields: [serviceBulletinId], references: [id], onDelete: Cascade)

  ocrStatus   OcrProcessingStatus @default(UPLOADED)
  draftStatus OcrDraftStatus      @default(DRAFT)
  rawPayload  Json?
  extractedAt DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

// 3. EES (Engineering Evaluation Sheet) - Hasil AI
model EesDocument {
  id        String @id
  eesNumber String @unique

  sourceSbId String          @unique
  sourceSb   ServiceBulletin @relation(fields: [sourceSbId], references: [id], onDelete: Cascade)

  // Dokumen Global Fields
  taskType      String?
  references    String?
  effectedType  String?
  effectedModel String?

  aircraftType String?

  esn String?

  storedGarudaPdfPath   String?
  storedCitilinkPdfPath String?
  storedExcelPath       String?

  reviewStatus  ApprovalStatus      @default(PENDING)
  evaluations   EesEvaluationItem[]
  reviewActions ReviewAction[]
  approval      Approval?
  createdAt     DateTime            @default(now())
}

model EesEvaluationItem {
  id              String      @id
  eesDocumentId   String
  eesDocument     EesDocument @relation(fields: [eesDocumentId], references: [id], onDelete: Cascade)
  itemNo          String
  paragraph       String?
  requirementDesc String      @db.Text
  remarks         String?     @db.Text
  taskType        String?
  adRelated       String?
  warranty        Boolean?
  rep             String?
  dueAt           DateTime?
  isApplicable    Boolean     @default(true)
}

// 4. Engineering Recommendation — Step 4 of EES Workflow (user input)
model EngineeringRecommendation {
  id   String          @id
  sbId String          @unique
  sb   ServiceBulletin @relation(fields: [sbId], references: [id], onDelete: Cascade)

  recommendedAction EngRecAction
  priorityLevel     Priority     @default(HIGH)
  engineeringNotes  String?      @db.Text
  isDeferable       Boolean      @default(false)
  egtMarginCheck    Boolean      @default(false)

  createdById String?
  createdBy   User?   @relation(fields: [createdById], references: [id])

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

/// --- ENGINE TRACKING & HISTORY ---

model EngineHistoryLog {
  id              String   @id @default(uuid())
  aircraftId      String?  
  position        String?
  removedEsn      String?
  installedEsn    String?
  sourceDocType   String?
  sourceDocId     String?
  notes           String?  @db.Text
  recordedAt      DateTime @default(now())
}

// --- 1. SHOP VISIT REPORTS (SVR) ---

model ShopVisitReport {
  id                      String             @id @default(uuid())
  engineSerialNumber      String
  engineId                String?
  engine                  Engine? @relation(fields: [engineId], references: [id], onDelete: SetNull)
  engineType              String?
  shopInDate              String? // Stored as string to keep exact format
  shopOutDate             String? // Stored as string to keep exact format
  reportDate              String? // Clarified field for SVR report date
  reasonForShopVisit      String? @db.Text
  tsn                     String?
  csn                     String?
  tslv                    String?
  cslv                    String?
  authorizedReleaseStatus String?
  originalFileName        String?
  storedFileName          String?
  rawPayload              Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  configurationReport EngineDocumentComponentLog[]
  llpStatus           EngineDocumentLlpLog[]
  adStatus            EngineDocumentAdLog[]
  complianceRecords   ComplianceRecord[]
}

// --- 2. ENGINE DATA SHEET (EDS) ---

model EngineDataSheet {
  id                      String  @id @default(uuid())
  engineSerialNumber      String
  engineId                String?
  engine                  Engine? @relation(fields: [engineId], references: [id], onDelete: SetNull)
  engineType              String?
  originalFileName        String?
  storedFileName          String?
  rawPayload              Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  configurationReport EngineDocumentComponentLog[]
  llpStatus           EngineDocumentLlpLog[]
  adStatus            EngineDocumentAdLog[]
  complianceRecords   ComplianceRecord[]
}

// --- 3. IQ03 REPORT ---

model Iq03Report {
  id                      String  @id @default(uuid())
  engineSerialNumber      String
  engineId                String?
  engine                  Engine? @relation(fields: [engineId], references: [id], onDelete: SetNull)
  engineType              String?
  originalFileName        String?
  storedFileName          String?
  rawPayload              Json?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  configurationReport EngineDocumentComponentLog[]
  llpStatus           EngineDocumentLlpLog[]
  adStatus            EngineDocumentAdLog[]
  complianceRecords   ComplianceRecord[]
}

// --- SHARED ENGINE COMPONENTS (ACTIVE VS LOG) ---

model EngineActiveComponent {
  id              String @id @default(uuid())
  engineId        String
  engine          Engine @relation(fields: [engineId], references: [id], onDelete: Cascade)
  partNumber      String
  partName        String?
  module          String?
  tsn             String?
  csn             String?
  lastUpdatedFrom String? // "SVR-123" or "EDS-456"
  updatedAt       DateTime @updatedAt
}

model EngineDocumentComponentLog {
  id                 String          @id @default(uuid())
  svrId              String?
  svr                ShopVisitReport? @relation(fields: [svrId], references: [id], onDelete: Cascade)
  edsId              String?
  eds                EngineDataSheet? @relation(fields: [edsId], references: [id], onDelete: Cascade)
  iq03Id             String?
  iq03               Iq03Report?      @relation(fields: [iq03Id], references: [id], onDelete: Cascade)
  engineSerialNumber String? 
  engineId           String?
  engine             Engine?         @relation(fields: [engineId], references: [id], onDelete: SetNull)
  module             String?
  partName           String?
  inOut              String? // "IN" or "OUT"
  partNumber         String?
  serial             String?
  qty                String?
  tsn                String?
  csn                String?
  tso                String?
  cso                String?
  workAccompl        String?
}

model EngineDocumentLlpLog {
  id                  String          @id @default(uuid())
  svrId               String?
  svr                 ShopVisitReport? @relation(fields: [svrId], references: [id], onDelete: Cascade)
  edsId               String?
  eds                 EngineDataSheet? @relation(fields: [edsId], references: [id], onDelete: Cascade)
  iq03Id              String?
  iq03                Iq03Report?      @relation(fields: [iq03Id], references: [id], onDelete: Cascade)
  engineSerialNumber  String? 
  engineId            String?
  engine              Engine?         @relation(fields: [engineId], references: [id], onDelete: SetNull)
  no                  String?
  description         String?
  partNumber          String?
  serialNumber        String?
  totalHour           String?
  totalCycle          String?
  totalCyclesCategory Json? 
  lifeLimitCycles     Json? 
  remainingCycles     Json? 
  remark              String?
}

model EngineDocumentAdLog {
  id                           String          @id @default(uuid())
  svrId                        String?
  svr                          ShopVisitReport? @relation(fields: [svrId], references: [id], onDelete: Cascade)
  edsId                        String?
  eds                          EngineDataSheet? @relation(fields: [edsId], references: [id], onDelete: Cascade)
  iq03Id                       String?
  iq03                         Iq03Report?      @relation(fields: [iq03Id], references: [id], onDelete: Cascade)
  engineSerialNumber           String? 
  engineId                     String?
  engine                       Engine?         @relation(fields: [engineId], references: [id], onDelete: SetNull)
  adNumber                     String?
  notificationDateOfCompliance String?
  description                  String?
  referenceSb                  String?
  recurrInsp                   String?
  moduleApplicability          String?
  methodOfCompliance           String?
  remarks                      String?         @db.Text
}

model ComplianceRecord {
  id             String                  @id @default(uuid())
  engineId       String
  engine         Engine                  @relation(fields: [engineId], references: [id], onDelete: Cascade)
  sbId           String?
  sb             ServiceBulletin?        @relation(fields: [sbId], references: [id], onDelete: Cascade)
  adId           String?
  ad             AirworthinessDirective? @relation(fields: [adId], references: [id], onDelete: Cascade)
  status         ComplianceStatus        @default(OPEN)
  complianceDate String? // Stored as string to preserve format
  svrId          String?
  svr            ShopVisitReport?        @relation(fields: [svrId], references: [id], onDelete: SetNull)
  edsId          String?
  eds            EngineDataSheet?        @relation(fields: [edsId], references: [id], onDelete: SetNull)
  iq03Id         String?
  iq03           Iq03Report?             @relation(fields: [iq03Id], references: [id], onDelete: SetNull)
  remarks        String?                 @db.Text

  resolutionReason          String?
  resolvedByComplianceId    String?
  resolvedByCompliance      ComplianceRecord?    @relation("ComplianceResolution", fields: [resolvedByComplianceId], references: [id], onDelete: SetNull)
  resolvesComplianceRecords ComplianceRecord[]   @relation("ComplianceResolution")
  audits                    SbComplianceAudit[]
  satisfiedGroupResults     SbGroupResult[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@unique([engineId, sbId])
  @@unique([engineId, adId])
}

// --- RELATIONS & REQUIREMENT GROUPS ---

model SbRelation {
  id             String          @id @default(uuid())
  sourceSbId     String
  sourceSb       ServiceBulletin @relation(fields: [sourceSbId], references: [id], onDelete: Cascade)
  targetSbNumber String
  relationType   SbRelationType
  conditionType  String?         // "PRE", "POST", "NONE"
  effectiveDate  DateTime?
  isActive       Boolean         @default(true)
  remarks        String?         @db.Text

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@index([sourceSbId, relationType])
  @@index([targetSbNumber])
}

model SbRequirementGroup {
  id              String                @id @default(uuid())
  groupCode       String                @unique
  groupName       String
  fulfillmentRule FulfillmentRule
  minimumRequired Int                   @default(1)
  description     String?               @db.Text
  isActive        Boolean               @default(true)
  members         SbRequirementMember[]
  results         SbGroupResult[]

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt
}

model SbRequirementMember {
  id                 String               @id @default(uuid())
  requirementGroupId String
  requirementGroup   SbRequirementGroup   @relation(fields: [requirementGroupId], references: [id], onDelete: Cascade)
  targetSbNumber     String
  sequenceNumber     Int?
  isActive           Boolean              @default(true)

  createdAt DateTime @default(now())

  @@unique([requirementGroupId, targetSbNumber])
}

model SbGroupResult {
  id                        String             @id @default(uuid())
  requirementGroupId        String
  requirementGroup          SbRequirementGroup @relation(fields: [requirementGroupId], references: [id], onDelete: Cascade)
  engineId                  String
  engine                    Engine             @relation(fields: [engineId], references: [id], onDelete: Cascade)
  fulfillmentStatus         FulfillmentStatus  @default(OPEN)
  satisfiedByComplianceId   String?
  satisfiedByCompliance     ComplianceRecord?  @relation(fields: [satisfiedByComplianceId], references: [id], onDelete: SetNull)
  satisfiedAt               DateTime?

  createdAt DateTime @default(now())
  updatedAt DateTime @default(now()) @updatedAt

  @@unique([requirementGroupId, engineId])
}

model SbComplianceAudit {
  id                       String            @id @default(uuid())
  complianceRecordId       String
  complianceRecord         ComplianceRecord  @relation(fields: [complianceRecordId], references: [id], onDelete: Cascade)
  previousStatus           ComplianceStatus?
  newStatus                ComplianceStatus
  changeSource             String            // "SYSTEM" or "USER"
  changeReason             String?           @db.Text
  triggeredByComplianceId String?
  changedById              String?
  changedBy                User?             @relation(fields: [changedById], references: [id], onDelete: SetNull)
  changedAt                DateTime          @default(now())

  @@index([complianceRecordId, changedAt])
}

// --- DASHBOARD TRACKING & APPROVAL ---

model ServiceBulletinRead {
  userId            String
  serviceBulletinId String
  readAt            DateTime @default(now())

  @@id([userId, serviceBulletinId])
}

enum ApprovalStatus {
  PENDING
  PARTIALLY_APPROVED
  APPROVED
  REJECTED
  RETURNED
}

model Approval {
  id            String         @id @default(uuid())
  eesId         String         @unique
  eesDocument   EesDocument    @relation(fields: [eesId], references: [id], onDelete: Cascade)
  approvalLevel Int            @default(1)
  status        ApprovalStatus @default(PENDING)
  submittedById String
  assignedToId  String?
  submittedAt   DateTime       @default(now())
  reviewedAt    DateTime?
  comment       String?        @db.Text

  @@index([assignedToId, status, submittedAt])
}

model ReviewAction {
  id        String         @id @default(uuid())
  eesId     String
  ees       EesDocument    @relation(fields: [eesId], references: [id], onDelete: Cascade)
  action    ApprovalStatus
  actorId   String
  actor     User           @relation(fields: [actorId], references: [id])
  actorRole Role
  createdAt DateTime       @default(now())
  comment   String?        @db.Text
  signaturePath String?

  @@index([action, createdAt])
  @@index([eesId, createdAt])
}
