erDiagram
    %% --- AUTH & MULTI-TENANT ---
    Operator {
        string id PK
        string code UK
        string name
    }

    User {
        string id PK
        string email UK
        string username UK
        string password
        Role role
        string operatorId FK
        datetime createdAt
        datetime updatedAt
    }

    %% --- ASSETS ---
    Aircraft {
        string id PK
        string registration UK
        string msn UK
        string aircraftType
        string operatorId FK
        boolean active
        datetime createdAt
        datetime updatedAt
    }

    Engine {
        string id PK
        string esn UK
        string msn
        string model
        string position
        string aircraftId FK
        boolean active
        datetime createdAt
        datetime updatedAt
    }

    %% --- DOCUMENTS ---
    AirworthinessDirective {
        string id PK
        string adNumber UK
        string title
        string issuer
        datetime issueDate
        datetime dueDate
        DocumentStatus status
        datetime createdAt
    }

    ServiceBulletin {
        string id PK
        string sbNumber UK
        string revision
        string title
        string issuer
        datetime issueDate
        datetime receivedAt
        DocumentStatus status
        SbType sbType
        int complianceCategory
        string effectivityType
        string effectivityRange
        string compliancePeriod
        string aircraftType
        string impactType
        string operatorId FK
        string originalFileName
        string storedFileName
        string createdById FK
        string updatedById FK
        datetime createdAt
    }

    %% --- OCR & EES WORKFLOW ---
    OcrResult {
        string id PK
        string serviceBulletinId FK "UK"
        OcrProcessingStatus ocrStatus
        OcrDraftStatus draftStatus
        json rawPayload
        datetime extractedAt
        datetime createdAt
        datetime updatedAt
    }

    EesDocument {
        string id PK
        string eesNumber UK
        string sourceSbId FK "UK"
        string taskType
        string references
        string effectedType
        string effectedModel
        string aircraftType
        string esn
        string storedGarudaPdfPath
        string storedCitilinkPdfPath
        string storedExcelPath
        ApprovalStatus reviewStatus
        datetime createdAt
    }

    EesEvaluationItem {
        string id PK
        string eesDocumentId FK
        string itemNo
        string paragraph
        string requirementDesc
        string remarks
        string taskType
        string adRelated
        boolean warranty
        string rep
        datetime dueAt
        boolean isApplicable
    }

    EngineeringRecommendation {
        string id PK
        string sbId FK "UK"
        EngRecAction recommendedAction
        Priority priorityLevel
        string engineeringNotes
        boolean isDeferable
        boolean egtMarginCheck
        string createdById FK
        datetime createdAt
        datetime updatedAt
    }

    %% --- SHOP VISIT REPORTS ---
    ShopVisitReport {
        string id PK
        string engineSerialNumber
        string engineId FK
        string engineType
        string shopInDate
        string shopOutDate
        string reportDate
        string reasonForShopVisit
        string tsn
        string csn
        string tslv
        string cslv
        string authorizedReleaseStatus
        string originalFileName
        string storedFileName
        json rawPayload
        datetime createdAt
        datetime updatedAt
    }

    SvrConfigurationItem {
        string id PK
        string svrId FK
        string engineSerialNumber
        string engineId FK
        string module
        string partName
        string inOut
        string partNumber
        string serial
        string qty
        string tsn
        string csn
        string tso
        string cso
        string workAccompl
    }

    SvrLlpStatus {
        string id PK
        string svrId FK
        string engineSerialNumber
        string engineId FK
        string no
        string description
        string partNumber
        string serialNumber
        string totalHour
        string totalCycle
        json totalCyclesCategory
        json lifeLimitCycles
        json remainingCycles
        string remark
    }

    SvrAdStatus {
        string id PK
        string svrId FK
        string engineSerialNumber
        string engineId FK
        string adNumber
        string notificationDateOfCompliance
        string description
        string referenceSb
        string recurrInsp
        string moduleApplicability
        string methodOfCompliance
        string remarks
    }

    %% --- COMPLIANCE & AUDIT ---
    ComplianceRecord {
        string id PK
        string engineId FK
        string sbId FK
        string adId FK
        ComplianceStatus status
        string complianceDate
        string svrId FK
        string remarks
        string resolutionReason
        string resolvedByComplianceId FK
        datetime createdAt
        datetime updatedAt
    }

    SbComplianceAudit {
        string id PK
        string complianceRecordId FK
        ComplianceStatus previousStatus
        ComplianceStatus newStatus
        string changeSource
        string changeReason
        string triggeredByComplianceId
        string changedById FK
        datetime changedAt
    }

    %% --- SB RELATIONS & GROUPS ---
    SbRelation {
        string id PK
        string sourceSbId FK
        string targetSbNumber
        SbRelationType relationType
        string conditionType
        datetime effectiveDate
        boolean isActive
        string remarks
        datetime createdAt
        datetime updatedAt
    }

    SbRequirementGroup {
        string id PK
        string groupCode UK
        string groupName
        FulfillmentRule fulfillmentRule
        int minimumRequired
        string description
        boolean isActive
        datetime createdAt
        datetime updatedAt
    }

    SbRequirementMember {
        string id PK
        string requirementGroupId FK
        string targetSbNumber
        int sequenceNumber
        boolean isActive
        datetime createdAt
    }

    SbGroupResult {
        string id PK
        string requirementGroupId FK
        string engineId FK
        FulfillmentStatus fulfillmentStatus
        string satisfiedByComplianceId FK
        datetime satisfiedAt
        datetime createdAt
        datetime updatedAt
    }

    %% --- APPROVAL & DASHBOARD ---
    Approval {
        string id PK
        string eesId FK "UK"
        int approvalLevel
        ApprovalStatus status
        string submittedById
        string assignedToId
        datetime submittedAt
        datetime reviewedAt
        string comment
    }

    ReviewAction {
        string id PK
        string eesId FK
        ApprovalStatus action
        string actorId FK
        Role actorRole
        datetime createdAt
        string comment
        string signaturePath
    }

    ServiceBulletinRead {
        string userId PK
        string serviceBulletinId PK
        datetime readAt
    }

    %% --- RELATIONSHIPS ---
    Operator ||--o{ User : "has"
    Operator ||--o{ Aircraft : "owns"
    Operator ||--o{ ServiceBulletin : "operates"

    User ||--o{ ServiceBulletin : "uploads (creator)"
    User ||--o{ ServiceBulletin : "updates (updater)"
    User ||--o{ EngineeringRecommendation : "creates"
    User ||--o{ ReviewAction : "acted_by"
    User ||--o{ SbComplianceAudit : "audited_by"

    Aircraft ||--o{ Engine : "has"

    Engine ||--o{ ShopVisitReport : "has"
    Engine ||--|{ ComplianceRecord : "tracked_in"
    Engine ||--o{ SvrConfigurationItem : "installed_on"
    Engine ||--o{ SvrLlpStatus : "llp_status"
    Engine ||--o{ SvrAdStatus : "ad_status"
    Engine ||--o{ SbGroupResult : "evaluated_in"

    AirworthinessDirective ||--o{ ComplianceRecord : "has"

    ServiceBulletin ||--o| OcrResult : "ocr_data"
    ServiceBulletin ||--o| EesDocument : "generates"
    ServiceBulletin ||--o| EngineeringRecommendation : "recommendation"
    ServiceBulletin ||--o{ ComplianceRecord : "compliance"
    ServiceBulletin ||--o{ SbRelation : "source_relations"

    EesDocument ||--|{ EesEvaluationItem : "evaluations"
    EesDocument ||--o| Approval : "approval_workflow"
    EesDocument ||--o{ ReviewAction : "review_history"

    ShopVisitReport ||--|{ SvrConfigurationItem : "contains"
    ShopVisitReport ||--|{ SvrLlpStatus : "contains"
    ShopVisitReport ||--|{ SvrAdStatus : "contains"
    ShopVisitReport ||--o{ ComplianceRecord : "records"

    ComplianceRecord ||--o{ SbComplianceAudit : "audits"
    ComplianceRecord ||--o{ SbGroupResult : "satisfies"
    ComplianceRecord ||--o| ComplianceRecord : "resolves"

    SbRequirementGroup ||--|{ SbRequirementMember : "members"
    SbRequirementGroup ||--o{ SbGroupResult : "results"
